syntax = "proto3";
package com.linkedout.proto.services;

import "models/message.proto";
import "models/messageChannel.proto";

// Get message channels of a user
message GetUserMessageChannelsRequest {
    string userId = 1;
}

message GetUserMessageChannelsResponse {
    repeated models.MessageChannel messageChannels = 1;
}

// Get a message channel of a user by id
message GetUserMessageChannelByIdRequest {
    string userId = 1;
    string messageChannelId = 2;
}

message GetUserMessageChannelByIdResponse {
    models.MessageChannel messageChannel = 1;
}

// Get messages of a message channel and user
message GetUserMessagesRequest {
    string userId = 1;
    string messageChannelId = 2;
}

message GetUserMessagesResponse {
    string messageChannelId = 1;
    string employerId = 2;
    repeated models.Message messages = 3;
}
